	the target architecture module instead of from the target.
	(read_register_gen): Ditto.
	(read_register): Ditto.
	(write_register_bytes): Store pseudo-registers (if any) to
	the target architecture module instead of to the target.
	(write_register_gen): Ditto.
	(write_register): Ditto.
	(build_regcache): Allocate enough register_valid space for
	pseudo-registers as well as normal (real) ones.
	
Tue Jul 11 19:45:42 2000  Andrew Cagney  <cagney@b1.cygnus.com>

 	* valops.c (value_cast): Allow cast from INT, ENUM or RANGE to
 	POINTER.

2000-07-11  Scott Bambrough <scottb@netwinder.org>

	* command.c (do_setshow_command): Fix typo in var_auto_boolean
	case.

Tue Jul 11 20:38:36 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c: General cleanup.  Delete all #if 0 code.  Convert
 	all old style K&R function definitions to ISO-C.
	(struct gdbarch_tdep): Add mips_abi_string.
	(mips_gdbarch_init): Initialize.
 	(mips_dump_tdep): Print mips_abi_string and other values.
	(mips_push_arguments): Add more detailed tracing.

Tue Jul 11 20:16:09 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (mips32_next_pc, mips16_next_pc,
 	read_next_frame_reg, mips_push_dummy_frame, mips_skip_stub,
 	mips_saved_pc_after_call): Use read_signed_register when
 	extracting register value.  Ensures all addresses are sign
 	extended.
	(mips_read_pc): New function.  Return sign extended address.
	(mips_gdbarch_init): Set gdbarch_read_pc.

Tue Jul 11 19:06:29 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote-mips.c (mips_request): Change all arguments to ULONGEST.
	(mips_exit_debug, mips_resume, mips_initialize, mips_wait,
 	mips_fetch_registers, mips_store_registers, mips_fetch_word):
 	Update.
	(mips_xfer_memory): When mask_address_p, mask MEMADDR down to just
 	32 bits.
	(_initialize_remote_mips): Add ``set mask-address'' command.

	* mips-tdep.c (_initialize_mips_tdep): Replace "set mask-address"
 	with "set mips mask-address".  Implement using